--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 				<version>${frontend-plugin.version}</version>
 				<configuration>
 					<workingDirectory>src/main/frontend</workingDirectory>
-					<nodeDownloadRoot>https://nodejs.org/dist/</nodeDownloadRoot>
+					<nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
 					<nodeVersion>${node.version}</nodeVersion>
 					<npmVersion>${npm.version}</npmVersion>
 					<installDirectory>target</installDirectory>
