--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "react-hot-loader": "^4.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
@@ -31,16 +32,19 @@
   "dependencies": {
     "axios": "^0.9.1",
     "babel-preset-stage-1": "^6.5.0",
+    "file-loader": "0.11.2",
     "history": "^2.0.0",
     "lodash": "^4.5.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.4",
+    "react-widgets": "4.2.0",
     "redux": "^3.3.1",
     "redux-simple-router": "^2.0.4",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "url-loader": "0.6.2"
   }
 }
