--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -43,6 +43,8 @@
     "react-router-redux": "^4.0.4",
     "react-widgets": "4.2.0",
     "redux": "^3.3.1",
+    "redux-logger": "3.0.6",
+    "redux-promise-middleware": "5.0.0",
     "redux-simple-router": "^2.0.4",
     "redux-thunk": "^2.0.1",
     "url-loader": "0.6.2"
