--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "css-loader": "^0.23.1",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
