--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -31,11 +31,13 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "axios": "^0.9.1",
     "babel-preset-stage-1": "^6.5.0",
     "file-loader": "0.11.2",
     "history": "^2.0.0",
     "lodash": "^4.5.1",
+    "material-ui": "^1.0.0-beta.42",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "^4.4.0",
