--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -37,9 +37,9 @@
     "file-loader": "0.11.2",
     "history": "^2.0.0",
     "lodash": "^4.5.1",
-    "material-ui": "^1.0.0-beta.42",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "material-ui": "^0.20.0",
+    "react": "15.4.0",
+    "react-dom": "15.4.0",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-bootstrap": "^0.23.0",
