--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -37,13 +37,14 @@
     "file-loader": "0.11.2",
     "history": "^2.0.0",
     "lodash": "^4.5.1",
-    "material-ui": "^0.20.0",
-    "react": "15.4.0",
-    "react-dom": "15.4.0",
+    "material-ui": "^1.0.0-beta.42",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-bootstrap": "^0.23.0",
-    "react-router-redux": "^4.0.4",
+    "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.0-rc.3",
+    "react-router-redux": "^4.0.8",
     "react-widgets": "4.2.0",
     "redux": "^3.3.1",
     "redux-logger": "3.0.6",
