--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -51,6 +51,7 @@
     "redux-promise-middleware": "5.0.0",
     "redux-simple-router": "^2.0.4",
     "redux-thunk": "^2.0.1",
+    "shortid": "^2.2.8",
     "url-loader": "0.6.2"
   }
 }
